--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Weather App</title>
 </head>
 <body>
-    
+    <div class="card">
+        <div class="search">
+            <input type="text" placeholder="enter city name" spellcheck="false">
+            <button><img src="./src/image/search.png" alt=""></button>
+        </div> 
+    </div>
     <script src = "./src/main.js"></script>
 </body>
 </html>
