--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
             <input type="text" placeholder="enter city name" spellcheck="false">
             <button><img src="./src/image/search.png" alt=""></button>
         </div> 
+        <div class="weather">
+            <img src="./src/image/rain.png" alt="" class="weather-icon">
+            <h1 class = 'temp'>22°C</h1>
+            <h2 class="city">New York</h2>
+            <div class="details">
+                <div class="col">
+                    <img src="./src/image/humidity.png" alt="">
+                </div>
+                <div>
+                    <p class="humidity">50%</p>
+                    <p>Humidity</p>
+                </div>
+            </div>
+        </div>
     </div>
     <script src = "./src/main.js"></script>
 </body>
