--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <img src="./src/image/wind.png" alt="">
              
                     <div>
-                        <p class="humidity">15 km/h</p>
+                        <p class="wind">15 km/h</p>
                         <p>Wind Speed</p>
                     </div>
                 </div>
