--- a/index.html
+++ b/index.html
@@ -12,8 +12,13 @@
             <input type="text" placeholder="enter city name" spellcheck="false">
             <button><img src="./src/image/search.png" alt=""></button>
         </div> 
+
+        <div class="error">
+            <p>Invalid city name</p>
+        </div>
+
+        <!-- weather -->
         <div class="weather">
-           
             <img src="./src/image/rain.png" alt="" class="weather-icon">
             <h1 class = 'temp'>22°C</h1>
             <h2 class="city">New York</h2>
